tests/valid/test_type_85.wyal
assert:
   forall(int|null i):
       if:
           !((i is null) || (i < 0))
       then:
           i >= 0
