tests/invalid/test_071.wyal
assert:
   forall(int|null i):
       if:
           (i is int) || (i < 0)
       then:
           i >= 0
